--- a/src/components/itemCarousel/ItemCarousel.module.scss
+++ b/src/components/itemCarousel/ItemCarousel.module.scss
@@ -15,3 +15,38 @@
   justify-content: center;
   align-items: center;
 }
+
+.item-btn {
+  all: unset;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 222px;
+  // height: 500px;
+  background-color: white;
+
+  .img-div {
+    padding: 24px;
+    min-height: 384px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    img {
+      width: 100%;
+    }
+  }
+  .text-div {
+    margin-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // height: 100px;
+    p {
+      text-align: center;
+      // margin: 0;
+      width: 100%;
+      font-weight: bold;
+    }
+  }
+}
