--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,9 +7,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  div {
-    width: 100%;
-  }
+  // div {
+  //   width: 100%;
+  // }
 }
 
 main {
