--- a/src/components/ItemBtn.module.scss
+++ b/src/components/ItemBtn.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/colors.scss";
+
 .item-btn {
   all: unset;
   cursor: pointer;
@@ -6,7 +8,7 @@
   text-align: left;
   width: 222px;
   // height: 500px;
-  background-color: white;
+  background-color: $white;
 
   .img-div {
     padding: 24px;
