--- a/src/components/descriptionAccordion/DescriptionAccordion.module.scss
+++ b/src/components/descriptionAccordion/DescriptionAccordion.module.scss
@@ -1,6 +1,8 @@
+@import "@/styles/colors.scss";
+
 .accordion-div {
   margin-top: 3rem;
-  background-color: white;
+  background-color: $white;
   width: 100%;
   display: flex;
   flex-direction: column;
