--- a/src/components/itemCarousel/ItemCarousel.module.scss
+++ b/src/components/itemCarousel/ItemCarousel.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/colors.scss";
+
 .carousel {
   width: 100%;
 }
@@ -8,7 +10,7 @@
   // justify-content: space-around;
   gap: 8px;
   align-items: center;
-  background-color: #c7c7c7;
+  background-color: $gray;
   padding: 1.5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -29,7 +31,7 @@
   text-align: left;
   width: 222px;
   // height: 500px;
-  background-color: white;
+  background-color: $white;
 
   .img-div {
     padding: 24px;
