--- a/src/pages/store/ProductDetailPage.module.scss
+++ b/src/pages/store/ProductDetailPage.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/colors.scss";
+
 .product-detail-div {
   display: flex;
   gap: 1rem;
@@ -7,9 +9,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: $white;
     width: 50%;
-    // height: 600px;
+    height: 600px;
     padding: 2rem;
     img {
       max-width: 400px;
@@ -25,8 +27,8 @@
     cursor: pointer;
     text-align: left;
     padding: 0.5rem 0.8rem;
-    background-color: rgb(238, 76, 76);
-    color: white;
+    background-color: $color4;
+    color: $white;
     font-weight: bold;
     border-radius: 4px;
   }
