--- a/src/components/descriptionAccordion/DescriptionAccordion.module.scss
+++ b/src/components/descriptionAccordion/DescriptionAccordion.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
   button {
     width: 100%;
     all: unset;
