--- a/src/components/itemCarousel/ItemCarousel.module.scss
+++ b/src/components/itemCarousel/ItemCarousel.module.scss
@@ -32,6 +32,7 @@
   width: 222px;
   // height: 500px;
   background-color: $white;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
 
   .img-div {
     padding: 24px;
