--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -1,4 +1,40 @@
-.logo {
-  height: 50px;
-  margin: 1rem;
+@import "@/styles/colors.scss";
+
+.header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  .logo {
+    height: 50px;
+    margin: 1rem;
+    margin-bottom: 0;
+  }
+  nav {
+    margin-top: 0.5rem;
+    ul {
+      margin: 0;
+      list-style: none;
+      padding: 0;
+      display: flex;
+      gap: 2rem;
+      li {
+        a {
+          font-weight: bold;
+          color: $black;
+          text-decoration: none;
+          p {
+            height: 2rem;
+            line-height: 2rem;
+            margin: 0;
+            text-align: center;
+          }
+        }
+        a:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
