--- a/src/pages/store/ProductDetailPage.module.scss
+++ b/src/pages/store/ProductDetailPage.module.scss
@@ -13,6 +13,7 @@
     width: 50%;
     height: 600px;
     padding: 2rem;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
     img {
       max-width: 400px;
     }
