--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,6 +3,7 @@ $text-light: white;
 $white: white;
 $black: black;
 $gray: #c7c7c7;
+$dark-gray: #393939;
 $background-color: #f3f3f3;
 $color1: #f2071b;
 $color2: #1797a6;
