--- a/src/components/itemCarousel/SortingButtons.module.scss
+++ b/src/components/itemCarousel/SortingButtons.module.scss
@@ -3,7 +3,7 @@
 .sorting-button-div {
   display: flex;
   gap: 0.6rem;
-  padding: 0.6rem;
+  // padding: 0.6rem;
   width: 100%;
   button {
     all: unset;
