--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,8 +6,10 @@
 // #F2CC0C
 
 @import "./colors.scss";
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
 
 body {
+  font-family: "Ubuntu", sans-serif;
   margin: 0;
   background-color: $background-color;
 }
