--- a/src/pages/cartPage/cartPage.module.scss
+++ b/src/pages/cartPage/cartPage.module.scss
@@ -1,3 +1,73 @@
+@import "@/styles/colors.scss";
+
 .cart-page-div {
   width: 100%;
+  ul {
+    list-style: none;
+    padding: 0;
+    li {
+      background-color: $white;
+      margin-bottom: 1rem;
+      padding: 1rem;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
+      .img-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 140px;
+        width: 100px;
+        padding: 10px;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
+        img {
+          width: 80px;
+        }
+      }
+    }
+  }
+  button {
+    all: unset;
+    cursor: pointer;
+    text-align: left;
+    padding: 0 0.8rem;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px;
+    height: 32px;
+  }
+  .remove-button {
+    background-color: $color1;
+  }
+
+  .minus-button {
+    background-color: $color2;
+  }
+
+  .plus-button {
+    background-color: $color2;
+  }
+
+  .clear-button {
+    background-color: $color1;
+  }
+  input {
+    text-align: center;
+    padding: 0 0.8rem;
+    height: 28px;
+    width: 30px;
+    margin: 0 0.2rem;
+  }
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  .left {
+    display: flex;
+    gap: 1rem;
+  }
+  .right {
+    // display: flex;
+    // justify-content: flex-end;
+  }
 }
