--- a/src/pages/cartPage/cartPage.module.scss
+++ b/src/pages/cartPage/cartPage.module.scss
@@ -34,6 +34,10 @@
     border-radius: 4px;
     height: 32px;
   }
+  .bottom-buttos-wrapper {
+    display: flex;
+    gap: 1rem;
+  }
   .remove-button {
     background-color: $color1;
   }
@@ -48,6 +52,9 @@
 
   .clear-button {
     background-color: $color1;
+  }
+  .checkout-button {
+    background-color: $color2;
   }
   input {
     text-align: center;
@@ -69,5 +76,16 @@
   .right {
     // display: flex;
     // justify-content: flex-end;
+  }
+}
+
+.total-price-wrapper {
+  background-color: $white;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin-bottom: 1rem;
+  p {
+    margin: 0;
+    font-weight: bold;
   }
 }
