--- a/src/pages/categoryPage/CategoryPage.module.scss
+++ b/src/pages/categoryPage/CategoryPage.module.scss
@@ -14,6 +14,9 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  li {
+    width: 100%;
+  }
 }
 
 .item-btn {
@@ -22,19 +25,21 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  width: 960px;
+  width: 100%;
   // height: 500px;
   background-color: $white;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
 
   .img-div {
-    padding: 24px;
-    min-height: 384px;
+    padding: 1rem 0;
+    // min-height: 384px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 100%;
     img {
-      width: 100%;
+      width: 95%;
     }
   }
   .text-div {
