--- a/src/components/layout/HamburgerMenu.module.scss
+++ b/src/components/layout/HamburgerMenu.module.scss
@@ -1,3 +1,5 @@
+@import "@/styles/colors.scss";
+
 .hamburger {
   margin-left: 1rem;
 }
@@ -23,7 +25,7 @@
       margin-left: 1rem;
 
       a {
-        color: #fff;
+        color: $black;
         text-decoration: none;
         // font-size: 1.5rem;
 
