--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -6,9 +6,15 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 2rem;
+  @media (max-width: 700px) {
+    margin-bottom: 0;
+  }
   .logo {
     height: 50px;
     margin: 1rem;
+    @media (max-width: 700px) {
+      height: 36px;
+    }
   }
 }
 
@@ -39,6 +45,10 @@
       text-decoration: none;
       color: $black;
       margin: 0 3rem;
+      @media (max-width: 700px) {
+        margin: 0 2rem;
+        font-size: smaller;
+      }
       p {
         margin: 0;
       }
@@ -50,5 +60,18 @@
     a:hover {
       text-decoration: underline;
     }
+  }
+}
+
+.hamburger-div {
+  display: none;
+  @media (max-width: 700px) {
+    display: block;
+  }
+}
+
+.navbar-div {
+  @media (max-width: 700px) {
+    display: none;
   }
 }
