--- a/src/pages/store/ProductDetailPage.module.scss
+++ b/src/pages/store/ProductDetailPage.module.scss
@@ -4,6 +4,10 @@
   display: flex;
   gap: 1rem;
   width: 100%;
+  @media (max-width: 700px) {
+    flex-direction: column;
+    align-items: center;
+  }
   .img-div {
     display: flex;
     flex-direction: column;
@@ -11,16 +15,23 @@
     align-items: center;
     background-color: $white;
     width: 50%;
-    height: 600px;
+    // height: 600px;
     padding: 2rem;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
     img {
+      width: 100%;
       max-width: 400px;
+    }
+    @media (max-width: 700px) {
+      width: 80%;
     }
   }
 
   .information-div {
     width: 50%;
+    @media (max-width: 700px) {
+      width: 100%;
+    }
   }
 
   .add-to-cart-btn {
