--- a/src/components/layout/HamburgerMenu.module.scss
+++ b/src/components/layout/HamburgerMenu.module.scss
@@ -14,6 +14,7 @@
   width: 70%;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
   ul {
     display: flex;
     flex-direction: column;
