--- a/src/components/layout/HamburgerMenu.module.scss
+++ b/src/components/layout/HamburgerMenu.module.scss
@@ -12,6 +12,7 @@
   top: 60px;
   left: 0;
   width: 70%;
+  max-width: 300px;
   flex-direction: column;
   align-items: center;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1), 0 2px 5px rgba(0, 0, 0, 0.1);
