--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -46,15 +46,40 @@
       color: $black;
       margin: 0 3rem;
       @media (max-width: 700px) {
-        margin: 0 2rem;
+        margin: 0 1rem;
         font-size: smaller;
       }
-      p {
-        margin: 0;
+      .cirlce {
+        border: 1px solid black;
+        position: absolute;
+        top: 42px;
+        right: 72px;
+        background-color: $white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 24px;
+        height: 24px;
+        // padding: 1rem;
+        border-radius: 100px;
+        @media (max-width: 700px) {
+          top: 34px;
+          right: 34px;
+        }
+        p {
+          margin: 0;
+          font-size: 20px;
+          @media (max-width: 700px) {
+            font-size: 18px;
+          }
+        }
       }
       .icon {
         color: $black;
-        font-size: 36px;
+        font-size: 42px;
+        @media (max-width: 700px) {
+          font-size: 36px;
+        }
       }
     }
     a:hover {
